--- a/application/templates/posts/new.html
+++ b/application/templates/posts/new.html
@@ -1,8 +1,27 @@
 {% extends "layout.html" %}
-  
+
 {% block body %}
 <form method="POST" action="{{ url_for('post_create') }}">
-  <input type="text" name="name"/>
-  <input type="submit" value="Add a new post"/>
+  <table>
+    <tr>
+      <td>
+        {{ form.content.label }}
+      </td>
+      <td>
+        {{ form.content }}
+      </td>
+      <td>
+        <ul>
+          {% for error in form.content.errors %}
+          <li>{{ error }}</li>
+          {% endfor %}
+        </ul>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="2">
+        <input type="submit" value="Create new post" />
+      </td>
+    </tr>
 </form>
 {% endblock %}
