Users, user creation, logins and logouts.
ADDED
>/auth/*
    - forms.py , contains forms for logging in and creating a new account
    - models.py , contains model for a user account.
    - views.py , handles the requests for any account related issue, login , create and logout
>templates/auth/*
    - loginform.html contains html for loginscreen.
    - signup.html contains gtml for signup screen.
MODIFIED
>__init__.py
    - added needed dependencies. and dependencies for bcrypt which didnt want to work (needs work)
>/posts/views.py
    - added login requirements.
>layout.html
    - added new navigation links to created pages.
REMOVED
>unused __init__.py file in /posts/

--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -9,12 +9,21 @@
 </head>
 
 <body>
+
   <header class="masthead mb-auto">
     <div class="inner">
       <nav class="nav nav-masthead justify-content-center">
         <a class="nav-link" href="/"> <i data-feather="home"></i> Home</a>
         <a class="nav-link" href="{{ url_for('posts_index') }}"> <i data-feather="list"></i> List posts</a>
         <a class="nav-link" href="{{ url_for('post_form') }}"> <i data-feather="file-plus"></i> Add a post</a>
+        <a class="nav-link" href="{{ url_for('auth_create') }}"> <i data-feather="smile"></i> Create an account</a>
+        {% if current_user.is_authenticated %}
+        <p class ="nav-link">
+          Signed in as user {{ current_user.name }}. <a href="{{ url_for('auth_logout') }}">Sign out</a>
+        </p>
+        {% else %}
+        <a class="nav-link" href="{{ url_for('auth_login') }}"><i data-feather="log-in"></i> Log in</a>
+        {% endif %}
     </div>
   </header>
 
