--- a/application/templates/posts/list.html
+++ b/application/templates/posts/list.html
@@ -7,6 +7,7 @@
     </tr>
     {% for post in posts %}
     <tr>
+        <td>{{post.account.name}} : </td>
         <td>{{ post.content }}</td>
         
     </tr>
