--- a/application/templates/auth/loginform.html
+++ b/application/templates/auth/loginform.html
@@ -1,29 +1,32 @@
 {% extends "layout.html" %}
 
 {% block body %}
-{{ error }}
-<form method="POST" action="{{ url_for('auth_login') }}">
-    <table>
-        <tr>
-            <td>
-                {{ form.username.label }}
-            </td>
-            <td>
-                {{ form.username }}
-            </td>
-        </tr>
-        <tr>
-            <td>
-                {{ form.password.label }}
-            </td>
-            <td>
-                {{ form.password }}
-            </td>
-        </tr>
-        <tr>
-            <td colspan="2">
-                <button type="submit" value="Login"><span><i data-feather="log-in"></i> </span>Login</button>
-            </td>
-        </tr>
-</form>
+<div class="container">
+    {{ error }}
+
+    <form method="POST" action="{{ url_for('auth_login') }}">
+        <table>
+            <tr>
+                <td>
+                    {{ form.username.label }}
+                </td>
+                <td>
+                    {{ form.username }}
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    {{ form.password.label }}
+                </td>
+                <td>
+                    {{ form.password }}
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <button type="submit" value="Login"><span><i data-feather="log-in"></i> </span>Sign in</button>
+                </td>
+            </tr>
+    </form>
+</div>
 {% endblock %}
