--- a/application/templates/auth/signup.html
+++ b/application/templates/auth/signup.html
@@ -1,87 +1,62 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<form method="POST" action="{{ url_for('auth_create') }}">
-    <table>
-        <tr>
-            <td>
-                <ul>
-                    {% for error in form.name.errors %}
-                    <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                {{ form.name.label }}
-            </td>
-            <td>
-                {{ form.name }}
-            </td>
-        </tr>
+<div class="contaier">
+    <div class="row">
+        <div class="col-5 mx-auto justify-content-center align-self-center">
+            <br />
+            <div class="card card-signin" style="background-color: lightgray">
 
-        
-        <tr>
-            <td>
-                <ul>
-                    {% for error in form.username.errors %}
-                    <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                {{ form.username.label }}
-            </td>
-            <td>
-                {{ form.username }}
-            </td>
-        </tr>
+                <div class="card-body">
+                    <h5 class="card-title text-center">Create account</h5>
+                    <form class="form-signin center" method="POST" action="{{ url_for('auth_create') }}">
+                        <div class="form-label-group">
+                            <input type="text" id="name" name="name" class="form-control" placeholder="Name" required
+                                autofocus>
+                        </div>
+                        <br />
+                        <div class="form-label-group">
+                            <input type="text" id="username" name="username" class="form-control" placeholder="Username"
+                                required>
+                        </div>
+                        <br />
+                        <div class="form-label-group">
+                            <input type="password" id="password" name="password" class="form-control"
+                                placeholder="Password" required>
+                        </div>
+                        <br />
+                        <div class="form-label-group">
+                            <input type="password" id="password2" name="password2" class="form-control"
+                                placeholder="Confirm password" required>
+                        </div>
+                        <br />
+                        <button class="btn btn-block btn-primary text-uppercase center" type="submit"> Sign up</button>
+                        <div style="color:red">
+                            <ul>
 
+                            </ul>
+                        </div>
+                    </form>
+                    <div style="color:red">
+                        <ul style="list-style: none">
+                            {% for error in form.name.errors %}
+                            <li>{{ error }}</li>
+                            {% endfor %}
+                            {% for error in form.username.errors %}
+                            <li>{{ error }}</li>
+                            {% endfor %}
+                            {% for error in form.password.errors %}
+                            <li>{{ error }}</li>
+                            {% endfor %}
+                            {% for error in form.password2.errors %}
+                            <li>{{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </div>
 
-        <tr>
-            <td>
-                <ul>
-                    {% for error in form.password.errors %}
-                    <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                {{ form.password.label }}
-            </td>
-            <td>
-                {{ form.password }}
-            </td>
-        </tr>
-
-
-        <tr>
-            <td>
-                <ul>
-                    {% for error in form.password2.errors %}
-                    <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                {{ form.password2.label }}
-            </td>
-            <td>
-                {{ form.password2 }}
-            </td>
-
-        </tr>
-        <tr>
-            <td colspan="2">
-                <input type="submit" value="Sign up!" />
-            </td>
-        </tr>
-</form>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
