--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -21,10 +21,11 @@
           <a class="nav-link nav-item {{'active' if request.path == '/'}}" href="/"> <i data-feather="home"></i> Home
           </a>
           <a class="nav-link nav-item {{'active' if request.path == '/posts'}}" href="{{ url_for('posts_index') }}"> <i
-              data-feather="list"></i> List posts </a>
+              data-feather="list"></i> Posts </a>
+          <a class="nav-link nav-item {{'active' if request.path == '/users/'}}" href="{{ url_for('auth_users') }}">
+            <i data-feather="users"></i> Users </a>
           {% if current_user.is_authenticated %}
-          <a class="nav-link nav-item {{'active' if request.path == '/posts/new/'}}" href="{{ url_for('post_form') }}">
-            <i data-feather="file-plus"></i> Add a post </a>
+
           <a class="nav-link nav-item" href="{{ url_for('auth_logout') }}"><i data-feather="log-out"></i> Sign out </a>
           {% else %}
           <a class="nav-link nav-item {{'active' if request.path == '/signup'}}" href="{{ url_for('auth_create') }}"> <i
