Comment adding implementation
ADDED
>comments/*
   - functionality for comments.
MODIFIED
>__init__.py
   - added imports for comments.
>auth/models.py
   - added relatioship to comments.
>posts/models.py
   - added relationship to comments.
>posts/views.py
   - added handlers for adding comments
>list.html
   - made comment amont dynamic.
>post.html
   - added form for adding comments, and a comment listing feature.

--- a/application/templates/posts/list.html
+++ b/application/templates/posts/list.html
@@ -31,7 +31,7 @@
                         data-feather="edit"></i></a>
                 {% endif %}
                 <a class="badge badge-primary badge-pill" href="{{ url_for('post_specific', post_id=post.id)}}"><i
-                        data-feather="message-square"></i>37</a>
+                        data-feather="message-square"></i>{{post.comments | length}}</a>
                 <a class="badge badge-primary badge-pill" href="#"><i data-feather="thumbs-up"></i>15</a>
                 <span class="badge badge-light badge-pill"><i data-feather="thumbs-up"></i>15</span>
 
