--- a/application/templates/posts/post.html
+++ b/application/templates/posts/post.html
@@ -18,7 +18,11 @@
       <div>
         <textarea id="content" name="content" class="form-control" required>{{post.content}}</textarea>
         <button class="btn  btn-primary text-uppercase center" type="submit"> EDIT </button>
+        <button form="delete" class="btn btn-danger text-uppercase" type="submit"> DELETE </button>
       </div>
+    </form>
+    <form id="delete" method="POST" action="{{ url_for('post_delete', post_id=post.id) }}">
+      <!-- button moved to the form above to avoid styling issues-->
     </form>
     {% endif %}
     <br />
@@ -27,6 +31,7 @@
     <span class="badge badge-light badge-pill"><i data-feather="thumbs-up"></i>15</span>
     <br/>
     <br/>
+    <!--comment creation field-->
     {% if current_user.is_authenticated %}
     <form method="POST" action="{{ url_for('new_comment', post_id=post.id) }}">
       <div style="margin-left: 2rem">
@@ -35,7 +40,7 @@
       </div>
     </form>
     {% endif %}
-
+    <!--comments-->
     <ul style="list-style: none">
         {% for comment in post.comments %}
       <li>
