--- a/application/templates/posts/post.html
+++ b/application/templates/posts/post.html
@@ -20,6 +20,13 @@
     {% if current_user.name == post.account.name %}
     <form method="POST" action="{{ url_for('post_edit', post_id=post.id) }}">
       <div>
+        {% if form.content.errors %}
+        <ul class="errors" style="color: red; list-style: none;">
+          {% for error in form.content.errors %}
+          <li>{{ error }}</li>
+          {% endfor %}
+        </ul>
+        {% endif %}
         <textarea id="content" name="content" class="form-control" required>{{post.content}}</textarea>
         <button class="btn  btn-primary text-uppercase center" type="submit"> EDIT </button>
         <button form="delete" class="btn btn-danger text-uppercase" type="submit"> DELETE </button>
@@ -38,9 +45,21 @@
     <!--comment creation field-->
     {% if current_user.is_authenticated %}
     <form method="POST" action="{{ url_for('new_comment', post_id=post.id) }}">
+      {% if commentform.comment.errors %}
+      <ul class="errors" style="color: red; list-style: none;">
+        {% for error in commentform.comment.errors %}
+        <li>{{ error }}</li>
+        {% endfor %}
+      </ul>
+      {% endif %}
       <div style="margin-left: 2rem">
+        {% if commentform.comment.data%}
+        <textarea id="comment" name="comment" class="form-control col-8" placeholder="What do you think about this?"
+          required>{{commentform.comment.data}}</textarea>
+        {% else %}
         <textarea id="comment" name="comment" class="form-control col-8" placeholder="What do you think about this?"
           required></textarea>
+        {% endif %}
         <button class="btn  btn-primary text-uppercase " type="submit"> Comment </button>
       </div>
     </form>
@@ -56,24 +75,32 @@
               <h6>{{comment.account.name}} </h6>
             </div>
             <div class="col-3">
-                {%if comment.date_modified != comment.date_created %}
-                <p> (edited) {{comment.date_modified}}</p>
-                {% else %}
-                <p>{{comment.date_modified}}</p>
-                {% endif %}
+              {%if comment.date_modified != comment.date_created %}
+              <p> (edited) {{comment.date_modified}}</p>
+              {% else %}
+              <p>{{comment.date_modified}}</p>
+              {% endif %}
             </div>
           </div>
           <p>{{comment.content}}</p>
         </div>
         {% if current_user.name == comment.account.name %}
         <form method="POST" action="{{ url_for('comment_edit', post_id = comment.post.id, comment_id=comment.id) }}">
+          {% if commentform.comment.errors %}
+          <ul class="errors" style="color: red; list-style: none;">
+            {% for error in commentform.comment.errors %}
+            <li>{{ error }}</li>
+            {% endfor %}
+          </ul>
+          {% endif %}
           <div>
             <textarea id="comment" name="comment" class="form-control" required>{{comment.content}}</textarea>
             <button class="btn  btn-primary text-uppercase center" type="submit"> EDIT </button>
             <button form="delete{{comment.id}}" class="btn btn-danger text-uppercase" type="submit"> DELETE </button>
           </div>
         </form>
-        <form id="delete{{comment.id}}" method="POST" action="{{ url_for('comment_delete', post_id = comment.post.id, comment_id=comment.id) }}">
+        <form id="delete{{comment.id}}" method="POST"
+          action="{{ url_for('comment_delete', post_id = comment.post.id, comment_id=comment.id) }}">
           <!-- button moved to the form above to avoid styling issues-->
         </form>
         {% endif %}
