--- a/application/templates/auth/list.html
+++ b/application/templates/auth/list.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-
+{% set active_page = "lista" %}
 {% block body %}
 <div class="container" style="margin-top: 2rem">
     
@@ -9,9 +9,9 @@
         <li>
             <div class="row">
                 <div class="col-9">
-                    <a href="#">{{user.name}}</a>
+                    <a href="{{ url_for('user_page', user_id=user.id)}}">{{user.name}}</a>
                 </div>
-                {% if current_user.is_authenticated %}
+                {% if current_user.is_authenticated and current_user.name != user.name %}
                 <div class="col-3">
                     <a class="btn btn-primary" href="#">Follow</a>
                 </div>
