--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-
+{% set active_page = "index" %}
 {% block body %}
 <div class="container">
   <div class=" jumbotron row">
