--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -18,27 +18,27 @@
       </button>
       <div class="collapse navbar-collapse " id="navbarNav">
         <div class="navbar-nav mr-auto">
-          <a class="nav-link nav-item {{'active' if request.path == '/'}}" href="/"> <i data-feather="home"></i> Home
+          <a class="nav-link nav-item {{'active' if active_page == 'index'}}" href="/"> <i data-feather="home"></i> Home
           </a>
-          <a class="nav-link nav-item {{'active' if request.path == '/posts'}}" href="{{ url_for('posts_index') }}"> <i
+          <a class="nav-link nav-item {{'active' if active_page == 'listp'}}" href="{{ url_for('posts_index') }}"> <i
               data-feather="list"></i> Posts </a>
-          <a class="nav-link nav-item {{'active' if request.path == '/users/'}}" href="{{ url_for('auth_users') }}">
+          <a class="nav-link nav-item {{'active' if active_page == 'lista'}}" href="{{ url_for('auth_users') }}">
             <i data-feather="users"></i> Users </a>
-          {% if current_user.is_authenticated %}
 
+        </div>
+        <div class="navbar-nav">
+          {% if current_user.is_authenticated %}
+          <a class="nav-link nav-item {{'active' if active_page == 'user'}}"
+            href="{{ url_for('user_page',user_id = current_user.id)}}"><i data-feather="user"></i>
+            {{ current_user.name }} </a>
           <a class="nav-link nav-item" href="{{ url_for('auth_logout') }}"><i data-feather="log-out"></i> Sign out </a>
           {% else %}
-          <a class="nav-link nav-item {{'active' if request.path == '/signup'}}" href="{{ url_for('auth_create') }}"> <i
+          <a class="nav-link nav-item {{'active' if active_page == 'signup'}}" href="{{ url_for('auth_create') }}"> <i
               data-feather="user-plus"></i> Create an account </a>
-          <a class="nav-link nav-item {{'active' if request.path == '/auth/login'}}"
-            href="{{ url_for('auth_login') }}"><i data-feather="log-in"></i> Sign in </a>
+          <a class="nav-link nav-item {{'active' if active_page == 'login'}}" href="{{ url_for('auth_login') }}"><i
+              data-feather="log-in"></i> Sign in </a>
           {% endif %}
         </div>
-        {% if current_user.is_authenticated %}
-        <span class="navbar-text">
-          Signed in as user {{ current_user.name }}.
-        </span>
-        {% endif %}
       </div>
     </nav>
   </header>
