--- a/application/templates/posts/list.html
+++ b/application/templates/posts/list.html
@@ -1,11 +1,11 @@
 {% extends "layout.html" %}
+{% set active_page = "listp" %}
 
 {% block body %}
 <div class="container" style="margin-top: 5rem">
 
-    <div style="color:red">{{ error }}</div>
     {% if current_user.is_authenticated %}
-
+    <!-- Post creation form with error handlers -->
     <form method="POST" action="{{ url_for('posts_index') }}">
         {% if form.content.errors %}
         <ul class="errors" style="color: red; list-style: none;">
@@ -23,6 +23,7 @@
         {% endif %}
         <button class="btn  btn-primary text-uppercase center" type="submit"> Post </button>
     </form>
+    <!-- End of form -->
     {% endif %}
 
     <ul style="list-style: none">
@@ -44,13 +45,14 @@
                 <p>{{ post.content }}</p>
 
 
-                <!-- mockup for like counter/like button-->
+
                 {% if current_user.name == post.account.name %}
                 <a class="badge badge-primary badge-pill" href="{{ url_for('post_specific', post_id=post.id)}}"><i
                         data-feather="edit"></i></a>
                 {% endif %}
                 <a class="badge badge-primary badge-pill" href="{{ url_for('post_specific', post_id=post.id)}}"><i
                         data-feather="message-square"></i>{{post.comments | length}}</a>
+                <!-- mockup for like counter/like button-->
                 <a class="badge badge-primary badge-pill" href="#"><i data-feather="thumbs-up"></i>15</a>
                 <span class="badge badge-light badge-pill"><i data-feather="thumbs-up"></i>15</span>
 
