--- a/application/templates/posts/list.html
+++ b/application/templates/posts/list.html
@@ -32,7 +32,7 @@
             <div style="padding:0.5rem">
                 <div class="row">
                     <div class="col-9">
-                        <h5>{{post.account.name}}: </h5>
+                            <a href="{{ url_for('user_page',user_id = post.account.id)}}"> <h5>{{post.account.name}}: </h5> </a>
                     </div>
                     <div class="col-3">
                         {%if post.date_modified != post.date_created %}
