--- a/application/templates/posts/post.html
+++ b/application/templates/posts/post.html
@@ -6,7 +6,10 @@
   <div style="padding:0.5rem">
     <div class="row">
       <div class="col-9">
-          <a href="{{ url_for('user_page',user_id = post.account.id)}}"> <h5>{{post.account.name}}: </h5> </a>
+        <a href="{{ url_for('user_page',user_id = post.account.id)}}">
+          <h5>{{post.account.name}}: </h5>
+        </a>
+        <p>{{ post.content }}</p>
       </div>
       <div class="col-3">
         {%if post.date_modified != post.date_created %}
@@ -14,36 +17,50 @@
         {% else %}
         {{post.date_modified}}
         {% endif %}
+        {% if current_user.name == post.account.name %}
+        <div id="postEditFormButton">
+          <button class="badge badge-primary badge-pill" style="border:transparent !important"
+            onclick="postEditToggle()"><i data-feather="edit"></i></button>
+        </div>
+        {% endif %}
       </div>
     </div>
-    <p>{{ post.content }}</p>
+
     {% if current_user.name == post.account.name %}
-    <form method="POST" action="{{ url_for('post_edit', post_id=post.id) }}">
-      <div>
-        {% if form.content.errors %}
-        <ul class="errors" style="color: red; list-style: none;">
-          {% for error in form.content.errors %}
-          <li>{{ error }}</li>
-          {% endfor %}
-        </ul>
-        {% endif %}
-        <textarea id="content" name="content" class="form-control" required>{{post.content}}</textarea>
-        <button class="btn  btn-primary text-uppercase center" type="submit"> EDIT </button>
-        <button form="delete" class="btn btn-danger text-uppercase" type="submit"> DELETE </button>
-      </div>
-    </form>
-    <form id="delete" method="POST" action="{{ url_for('post_delete', post_id=post.id) }}">
-      <!-- button moved to the form above to avoid styling issues-->
-    </form>
+
+    <div id="postEditForm" style="display: none;">
+      <form method="POST" action="{{ url_for('post_edit', post_id=post.id) }}">
+        <div>
+          {% if form.content.errors %}
+          <ul class="errors" style="color: red; list-style: none;">
+            {% for error in form.content.errors %}
+            <li>{{ error }}</li>
+            {% endfor %}
+          </ul>
+          {% endif %}
+          <textarea id="content" name="content" class="form-control" maxlength="144" required>{{post.content}}</textarea>
+          <button class="btn  btn-primary text-uppercase center" type="submit"> EDIT </button>
+          <button form="delete" class="btn btn-danger text-uppercase" type="submit"> DELETE </button>
+          <a class="btn btn-secondary text-uppercase" style="color:white" onclick="postEditToggle()"> CANCEL </a>
+        </div>
+      </form>
+      <form id="delete" method="POST" action="{{ url_for('post_delete', post_id=post.id, site='post') }}">
+        <!-- button moved to the form above to avoid styling issues-->
+      </form>
+    </div>
     {% endif %}
     <br />
+
+
     <!-- mockup for like counter/like button-->
     <a class="badge badge-primary badge-pill" href="#"><i data-feather="thumbs-up"></i></a>
     <span class="badge badge-light badge-pill"><i data-feather="thumbs-up"></i>15</span>
     <br />
-    <br />
+
+
     <!--comment creation field-->
     {% if current_user.is_authenticated %}
+    <hr/>
     <form method="POST" action="{{ url_for('new_comment', post_id=post.id) }}">
       {% if commentform.comment.errors %}
       <ul class="errors" style="color: red; list-style: none;">
@@ -55,24 +72,30 @@
       <div style="margin-left: 2rem">
         {% if commentform.comment.data%}
         <textarea id="comment" name="comment" class="form-control col-8" placeholder="What do you think about this?"
-          required>{{commentform.comment.data}}</textarea>
+        maxlength="144" required>{{commentform.comment.data}}</textarea>
         {% else %}
         <textarea id="comment" name="comment" class="form-control col-8" placeholder="What do you think about this?"
-          required></textarea>
+        maxlength="144" required></textarea>
         {% endif %}
         <button class="btn  btn-primary text-uppercase " type="submit"> Comment </button>
       </div>
     </form>
     {% endif %}
+
+
     <!--comments-->
     <ul style="list-style: none">
       {% for comment in post.comments %}
       <li>
+        <hr />
         <div class="container">
-          <br />
+
           <div class="row">
             <div class="col-9">
-              <a href="{{ url_for('user_page',user_id = comment.account.id)}}"><h6>{{comment.account.name}}</h6></a>
+              <a href="{{ url_for('user_page',user_id = comment.account.id)}}">
+                <h6>{{comment.account.name}}:</h6>
+              </a>
+              <p>{{comment.content}}</p>
             </div>
             <div class="col-3">
               {%if comment.date_modified != comment.date_created %}
@@ -80,34 +103,52 @@
               {% else %}
               <p>{{comment.date_modified}}</p>
               {% endif %}
+              {% if current_user.name == comment.account.name %}
+              <div id="commentEditFormButton">
+                <button class="badge badge-primary badge-pill" style="border:transparent !important"
+                  onclick="commentEditToggle({{comment.id}})"><i data-feather="edit"></i></button>
+              </div>
+              {% endif %}
             </div>
-          </div>
-          <p>{{comment.content}}</p>
+          </div>         
         </div>
+
+
+        <!-- Comment edit form-->
         {% if current_user.name == comment.account.name %}
-        <form method="POST" action="{{ url_for('comment_edit', post_id = comment.post.id, comment_id=comment.id) }}">
-          {% if commentform.comment.errors %}
-          <ul class="errors" style="color: red; list-style: none;">
-            {% for error in commentform.comment.errors %}
-            <li>{{ error }}</li>
-            {% endfor %}
-          </ul>
-          {% endif %}
-          <div>
-            <textarea id="comment" name="comment" class="form-control" required>{{comment.content}}</textarea>
-            <button class="btn  btn-primary text-uppercase center" type="submit"> EDIT </button>
-            <button form="delete{{comment.id}}" class="btn btn-danger text-uppercase" type="submit"> DELETE </button>
-          </div>
-        </form>
-        <form id="delete{{comment.id}}" method="POST"
-          action="{{ url_for('comment_delete', post_id = comment.post.id, comment_id=comment.id) }}">
-          <!-- button moved to the form above to avoid styling issues-->
-        </form>
+        <div id="{{comment.id}}" style="display: none">
+          <form method="POST" action="{{ url_for('comment_edit', post_id = comment.post.id, comment_id=comment.id) }}">
+            {% if commentform.comment.errors %}
+            <ul class="errors" style="color: red; list-style: none;">
+              {% for error in commentform.comment.errors %}
+              <li>{{ error }}</li>
+              {% endfor %}
+            </ul>
+            {% endif %}
+            <div>
+              <textarea id="comment" name="comment" class="form-control" maxlength="144" required>{{comment.content}}</textarea>
+              <button class="btn  btn-primary text-uppercase center" type="submit"> EDIT </button>
+              <button form="delete{{comment.id}}" class="btn btn-danger text-uppercase" type="submit"> DELETE </button>
+              <a class="btn btn-secondary text-uppercase" style="color:white"
+                onclick="commentEditToggle({{comment.id}})"> CANCEL </a>
+            </div>
+          </form>
+          <form id="delete{{comment.id}}" method="POST"
+            action="{{ url_for('comment_delete', post_id = comment.post.id, comment_id=comment.id) }}">
+            <!-- button moved to the form above to avoid styling issues-->
+          </form>
+        </div>
         {% endif %}
+        <!-- end of comment editing -->
+
+        
       </li>
       {% endfor %}
     </ul>
 
   </div>
 </div>
+
+<script type="text/javascript" src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+
 {% endblock %}
