Following functionality, and comments in the code
MODIFIED
>auth/models.py
    - added association table for followers and following, as well as methods for using it
> */views.py
    - added functionality for following and followed pages. as well as commented the code
> renamed scripts.js to post.js
>html
    - updated imports for javascript, added implementation for followed page and modified the user listing page to look more pleasing

--- a/application/templates/auth/user.html
+++ b/application/templates/auth/user.html
@@ -9,7 +9,15 @@
             <br />
             {% if current_user.is_authenticated and user.name != current_user.name %}
             <div class="col-3">
-                <a class="btn btn-primary" href="#">Follow</a>
+                    {% if current_user.check_following_status(user) %}
+                    <form method="POST" action="{{ url_for('unfollow', user_id=user.id)}}">
+                        <button type="submit" class="btn btn-secondary">Unfollow</a>
+                    </form>
+                    {% else %}
+                    <form method="POST" action="{{ url_for('follow', user_id=user.id)}}">
+                        <button type="submit" class="btn btn-primary">Follow</a>
+                    </form>
+                    {% endif %}
             </div>
             {% endif %}
             <br />
@@ -20,7 +28,7 @@
         <div class="col-9" id="right">
             <br />
             <ul style="list-style: none">
-                {% for post in user.posts %}
+                {% for post in posts %}
                 <li>
                     <div style="padding:0.5rem">
                         <div class="row">
