--- a/application/templates/auth/list.html
+++ b/application/templates/auth/list.html
@@ -2,23 +2,34 @@
 {% set active_page = "lista" %}
 {% block body %}
 <div class="container" style="margin-top: 2rem">
-    
 
-    <ul style="list-style: none">
+
+    <ul class="row" style="list-style: none">
         {% for user in users %}
-        <li>
+        {% if current_user.is_authenticated and current_user.name != user.name %}
+        <li class="col-4"  >
             <div class="row">
-                <div class="col-9">
+                <div class="col">
                     <a href="{{ url_for('user_page', user_id=user.id)}}">{{user.name}}</a>
                 </div>
-                {% if current_user.is_authenticated and current_user.name != user.name %}
-                <div class="col-3">
-                    <a class="btn btn-primary" href="#">Follow</a>
+                <br>
+                
+                <div class="col">
+                    {% if current_user.check_following_status(user) %}
+                    <form method="POST" action="{{ url_for('unfollow', user_id=user.id)}}">
+                        <button type="submit" class="btn btn-secondary">Unfollow</a>
+                    </form>
+                    {% else %}
+                    <form method="POST" action="{{ url_for('follow', user_id=user.id)}}">
+                        <button type="submit" class="btn btn-primary">Follow</a>
+                    </form>
+                    {% endif %}
                 </div>
-                {% endif %}
+                
             </div>
-            <br/>
+            <hr />
         </li>
+        {% endif %}
         {% endfor %}
     </ul>
 </div>
