--- a/application/templates/posts/post.html
+++ b/application/templates/posts/post.html
@@ -105,6 +105,7 @@
               {% endif %}
               {% if current_user.name == comment.account.name %}
               <div id="commentEditFormButton">
+                <!-- vs code claims this contains errors, but it works as intended. JS just doesnt like Jinja2-->
                 <button class="badge badge-primary badge-pill" style="border:transparent !important"
                   onclick="commentEditToggle({{comment.id}})"><i data-feather="edit"></i></button>
               </div>
@@ -141,7 +142,7 @@
         {% endif %}
         <!-- end of comment editing -->
 
-        
+
       </li>
       {% endfor %}
     </ul>
@@ -149,6 +150,6 @@
   </div>
 </div>
 
-<script type="text/javascript" src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/post.js') }}"></script>
 
 {% endblock %}
