--- a/application/templates/auth/list.html
+++ b/application/templates/auth/list.html
@@ -29,6 +29,16 @@
             </div>
             <hr />
         </li>
+        {% elif not current_user.is_authenticated %}
+        <li class="col-4"  >
+                <div class="row">
+                    <div class="col">
+                        <a href="{{ url_for('user_page', user_id=user.id)}}">{{user.name}}</a>
+                    </div>
+                    <br>                                     
+                </div>
+                <hr />
+            </li>
         {% endif %}
         {% endfor %}
     </ul>
